# hublot

./: Cargo.toml  TODO  rustfmt.toml
examples/: hello.rs
src/: color.rs  event_loop.rs  geom.rs  gfx.rs  lib.rs  paint.rs  transform.rs
src/render/: frame.rs  memalloc.rs  mod.rs  rect.rs  services.rs
src/style/: mod.rs
src/ui/: label.rs  layout.rs  mod.rs  node.rs  view.rs
